$Id$

v0.91.3		11-Feb-2007

	mbuser:
		Set default editor on erased records.

	mbfile:
		The check filebase command now also removes dead symlinks from
		the download directories.

	mbtask:
		Some code cleanup.



v0.91.2		14-Jan-2007 - 11-Feb-2007

	mbcico:
		If no suitable compressor found for binkp transfers then don't
		complain.

	mbselib:
		Fixed commandline address parsing if a 2d address was given.

	mbfido:
		Check if active marked virusscanner is really present on the
		system.

	mbsebbs:
		Check if active marked virusscanner is really present on the
		system.


v0.91.1		22-Dec-2006

	mbsebbs:
		Remove some private user files from the users home directory
		during logoff.


v0.91.0		08-Oct-2006 - 22-Dec-2006

	script:
		Fixed problems with newer joe editor versions.


v0.90.0		06-Nov-2005 - 23-Jul-2006

        upgrade:
                Start mbsetup once and leave, this will update user records
                with the wrong editor choice, fixes the files databases if
		needed and upgrades the nodes settings.
                Add extra switches to unarchiver commands entry 11, see
                mbsetup for the archivers.
                In menus 7.n.3.14 check if the NR flag is off, unless you need
                it (which I doubt).

        mbsebbs:
                Removed antique line editor.
                Added check for users homedirectory permissions and attempt to
                fix errors. If fatal the connection is dropped.
                Fixed virus scan of uploaded archives.
                There are no paths anymore in OLR download packet files.
                Made OLR bluewave packets CPU independant.
                Fixed a strange bug that ftell didn't work right, this caused
                corrupt bluewave download packets.
                Bluewave is now big/little endian correct.
                Added width marker for chat input and fixed linelength.
                Added screen rows detection using ANSI sequences needed for